DBMS Lab, 2024 Feb 20 Extra

--- a/Sem04/DBMS/2024-02-20.md
+++ b/Sem04/DBMS/2024-02-20.md
@@ -55,3 +55,6 @@ SELECT enrollment, branch FROM student
 INSERSECT SELECT enrollment, name FROM accounts
 ORDER BY enrollment, branch
 ```
+
+# Programs Created
+- [Join Example](./join.sql)
